форма заработала. продолжаем

--- a/source/index.html
+++ b/source/index.html
@@ -703,9 +703,9 @@
           <form action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
             <h3>Бесплатное занятие</h3>
             <div class="form-container__input-container">
-              <div class="form-container__input-wrapper" required placeholder="Имя" data-validate-type="text"
+              <div class="form-container__input-wrapper" placeholder="Имя" data-validate-type="text"
                 data-limitation="name" data-message-base="Поле обязательно к заполнению"
-                data-message-extra="Проверьте корректность заполнения поля" data-required="data-required">
+                data-message-extra="Проверьте корректность заполнения поля" data-required="data-required"  required>
                 <label>
                   <input class="form-container__input" type="text" name="name" placeholder="Имя">
                 </label>
