--- a/source/index.html
+++ b/source/index.html
@@ -525,7 +525,7 @@
             <ul>
               <li>
                 <h5>Как стать членом фитнес-центра?</h5>
-                <button class="faq__button button is-opened" data-target="is-opened">Открытая информацию</button>
+                <button class="faq__button button is-opened" >Открытая информацию</button>
                 <p data-target="is-opened">При первом посещении и покупке абонемента, необходимо заполнить анкету и
                   подписать договор. При
                   покупке абонемента онлайн, анкета также заполняется онлайн и договор придет вам на почту.</p>
@@ -701,7 +701,7 @@
         <h2 class="visually-hidden">Контактная информация</h2>
         <div class="footer__form-container form-container" data-form-validate="data-form-validate">
           <form action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
-            <h3>Бесплатное занятие</h3>
+            <h3 class="footer__header">Бесплатное занятие</h3>
             <div class="form-container__input-container">
               <div class="form-container__input-wrapper" placeholder="Имя" data-validate-type="text"
                 data-limitation="name" data-message-base="Поле обязательно к заполнению"
