--- a/source/index.html
+++ b/source/index.html
@@ -210,7 +210,7 @@
 
       <section class="jury-swiper">
         <h2 class="jury-title">Жюри</h2>
-        <div class="jury-container container">
+        <div class="jury-container container" data-swiper="jury-container">
           <button class="swiper-button-prev button" data-swiper="button-prev">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
@@ -655,7 +655,7 @@
 
       <section class="reviews-swiper">
         <h2 class="swiper-title">Отзывы</h2>
-        <div class="reviews-container container">
+        <div class="reviews-container container" data-swiper="review-container">
           <button class="swiper-button-prev button" data-swiper="button-prev">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
