немного правок по ПП

--- a/source/index.html
+++ b/source/index.html
@@ -423,7 +423,7 @@
 
       <section class="advantages">
         <div class="advantages__container container">
-          <h2>Наши Преимущества</h2>
+          <h2>Наши преимущества</h2>
           <ul>
             <li>
               <div class="advantages__count-wrapper">
